--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,28 @@ authors = ["Ankit Khambhati <akhambhati@gmail.com>"]
 python = "^3.10"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.1.1"
+coverage = {version = "^6.3.2", extras = ["toml"]}
+pytest-cov = "^3.0.0"
+pytest-mock = "^3.7.0"
+black = "^22.3.0"
+flake8 = "^4.0.1"
+flake8-bandit = "^3.0.0"
+flake8-black = "^0.3.2"
+flake8-bugbear = "^22.3.23"
+flake8-import-order = "^0.18.1"
+safety = "^1.10.3"
+
+[tool.coverage.paths]
+source = ["src", "*/site-packages"]
+
+[tool.coverage.run]
+branch = true
+source = ["presidio_redcap"]
+
+[tool.coverage.report]
+show_missing = true
+fail_under = 100
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
