--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ flake8-black = "^0.3.2"
 flake8-bugbear = "^22.3.23"
 flake8-import-order = "^0.18.1"
 safety = "^1.10.3"
+mypy = "^0.942"
+typeguard = "^2.13.3"
+flake8-annotations = "^2.8.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
