--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-/.coverage
-/.mypy_cache/
-/.nox/
-/.python-version
-/.pytype/
-/docs/_build/
-/src/*.egg-info/
+.coverage
+.mypy_cache/
+.nox/
+.python-version
+.pytype/
+docs/_build/
+src/*.egg-info/
 __pycache__/
 
 # Byte-compiled / optimized / DLL files
