--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Ankit Khambhati <akhambhati@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pycap = {extras = ["pandas"], version = "^2.1.0"}
+pandas = "^1.4.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
