--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,29 @@
-# .pre-commit-config.yaml
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
-    hooks:
-    -   id: check-yaml
-    -   id: check-added-large-files
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
-    -   id: detect-private-key
--   repo: local
-    hooks:
-    -   id: black
-        name: black
-        entry: poetry run black
-        language: system
-        types: [python]
-    -   id: flake8
-        name: flake8
-        entry: poetry run flake8
-        language: system
-        types: [python]
+- hooks:
+  - id: check-yaml
+  - id: check-added-large-files
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+  - id: detect-private-key
+  repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.2.0
+- hooks:
+  - entry: poetry run black
+    id: black
+    language: system
+    name: black
+    types:
+    - python
+  - entry: poetry run flake8
+    id: flake8
+    language: system
+    name: flake8
+    types:
+    - python
+  repo: local
+- hooks:
+  - id: commitizen
+    stages:
+    - commit-msg
+  repo: https://github.com/commitizen-tools/commitizen
+  rev: v2.24.0
