--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ Pygments = "^2.11.2"
 Sphinx = "^4.5.0"
 sphinx-autodoc-typehints = "^1.18.1"
 codecov = "^2.1.12"
+commitizen = "^2.24.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
@@ -44,6 +45,11 @@ source = ["presidio_redcap"]
 show_missing = true
 fail_under = 100
 
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+version = "0.1.0"
+tag_format = "$version"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
