--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = ["Ankit Khambhati <akhambhati@gmail.com>"]
 python = "^3.10"
 pycap = {extras = ["pandas"], version = "^2.1.0"}
 pandas = "^1.4.2"
+dataclasses-json = "^0.5.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
