--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "presidio-redcap"
-version = "0.1.0"
+version = "0.2.0"
 description = "Interface for Behavioral and Biometric Database for Presidio"
 documentation = "https://presidio-redcap.readthedocs.io"
 authors = ["Ankit Khambhati <akhambhati@gmail.com>"]
@@ -50,7 +50,11 @@ fail_under = 100
 name = "cz_conventional_commits"
 version = "0.2.0"
 tag_format = "$version"
-version_files = "src/__init__.py"
+version_files = [
+    "src/presidio-redcap/__init__.py",
+    "pyproject.toml:version"
+]
+bump_message = "bump: $current_version → $new_version [skip-ci]"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
