build: add dev for ipykernel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ Sphinx = "^4.5.0"
 sphinx-autodoc-typehints = "^1.18.1"
 codecov = "^2.1.12"
 commitizen = "^2.24.0"
+ipykernel = "^6.13.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
