--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "ipython>=8.32.0",
     "poethepoet>=0.32.2",
     "pyright>=1.1.394",
     "pytest>=8.3.4",
