--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,3 +67,6 @@ check = "pyright"
 test = "pytest"
 # run all the above
 all = [ {ref="fmt"}, {ref="lint"}, {ref="check"}, {ref="test"} ]
+
+"ci:fmt" = "ruff format --check"  # fail if not formatted
+"ci:lint" = "ruff check"
